--- a/Ex-4/index.html
+++ b/Ex-4/index.html
@@ -11,8 +11,8 @@
             <div class="card" >
             <div class="head">
 
-              <img src="Super.webp" alt="photo" width="90px" height="90px" >
-              <h1>I am human</h1>
+              <img src="Super.webp"  alt="photo" width= "90px" height="90px" >
+              <h1>Chea Ilong</h1>
               <p>Software Engineering</p>
 
             </div>
